R.css
:root[data-dark="true"] {
  --text: var(--dark-text);
  --background: var(--dark-background);
  --primary: var(--dark-primary);
  --link: var(--dark-link);
  --visited: var(--dark-visited);
}

:root[data-dark="false"] {
  --text: var(--light-text);
  --background: var(--light-background);
  --primary: var(--light-primary);
  --link: var(--light-link);
  --visited: var(--light-visited);
}

* {
  box-sizing: border-box;
}

ul,
ol {
  list-style: none;
}

html {
  scroll-padding-top: 2rem;
}

html,
body {
  height: 100%;
}

body {
  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
  font-family: var(--font);
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;

  margin: 0;

  color: var(--text);
  background-color: var(--background);

  display: grid;
  grid:
    "header	header	header" auto
    "aside	main		blank" 1fr
    "footer	footer	footer" auto
    / 1fr 75ch 1fr;
}
@media screen and (width <= 115ch) {
  body {
    grid:
      "header	header" auto
      "aside	main	" 1fr
      "footer	footer" auto
      / 1fr 75ch;
  }
}
@media screen and (width <= 95ch) {
  body {
    grid:
      "header" auto
      "main" 1fr
      "footer" auto
      / 1fr;
  }
  aside {
    display: none;
  }
}

header {
  grid-area: header;
  /* background-color: #db4d3f; */
  background-color: var(--primary);
  color: var(--background);
}
main {
  grid-area: main;
}
aside {
  grid-area: aside;

  align-self: start; /* https://defensivecss.dev/tip/position-sticky-grid/ */
  position: sticky;
  top: 1rem;

  a,
  a:visited {
    color: var(--link);
  }
}
footer {
  grid-area: footer;

  color: var(--background);
  background-color: var(--primary);

  padding: 1rem;
}

a {
  color: var(--link);
  font-weight: bold;
  text-decoration: none;
}
a:visited {
  color: var(--visited);
}
a:hover {
  text-decoration: underline;
  text-decoration-thickness: 0.125em;
}

header a,
footer a,
header a:visited,
footer a:visited {
  color: var(--background);
}

/*
  Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}

header,
main,
aside,
footer {
  padding: 1rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 0.95;
  overflow-wrap: break-word;
}
h1 {
  margin-top: 5rem;
  text-decoration: underline;
}
h2 {
  margin-top: 4rem;
  text-decoration: underline dashed var(--text);
}
h3 {
  margin-top: 3rem;
}
h4 {
  margin-top: 2rem;
}
hgroup p,
hgroup h1,
hgroup h2,
hgroup h3,
hgroup h4,
hgroup h5,
hgroup h6 {
  margin: 0;
}
hgroup {
  padding: 1rem;
}

summary {
  cursor: pointer;
}
summary:not(:empty)::-webkit-details-marker,
summary:not(:empty)::marker {
  display: none;
  content: "";
}
details summary *:first-child::before {
  content: "▶";
  font-size: 0.7em;
  margin-right: 0.6em;
}
details[open] summary *:first-child::before {
  content: "▼";
}

image,
figure,
object {
  height: auto;
  max-width: 100%;
  object-fit: cover;
}

button {
  background-color: var(--primary);
  border: 1px solid var(--background);
  text-transform: capitalize;
  border-radius: 0.25em;
  color: var(--background);
  display: inline-block;
  padding: 0.75rem;
  cursor: pointer;
}

input[type="text"],
input[type="password"],
input[type="email"],
select {
  color: var(--text);
  border: 1px solid var(--text);
  outline: none;
  padding: 0.5rem;

  background-color: var(--background);
}
input:focus {
  border-color: var(--primary);
}

/* fuck apple and their pretentious bullshit */
/* "we don't allow it to guarantee contrast" We're not all as dumb as you are, corporate cock suckers. */
/* `accent-color` has been in other browser for 40 major updates. */
/* https://dev.to/madsstoumann/styling-checkboxes-and-switches-pf0 */
[type="checkbox"]:checked {
  --_bdc: transparent;
  --_bg: var(--_accent);
  --_bga: var(--background, Field);
}
[type="checkbox"],
[type="checkbox"]:focus {
  --_accent: var(--primary);
  --_bdw: calc(1em * (4 / 3) / 13.333333);
  --_mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="3" stroke="%23000" fill="none" stroke-linecap="round" stroke-linejoin="round"> <path d="M5 12l5 5l10 -10"/></svg>');

  appearance: none;
  aspect-ratio: 1;
  /* background: var(--_bg, Field); */
  background: var(--_bg, --background);
  border: var(--_bdw) solid var(--_bdc, GrayText);
  border-radius: var(--_bdrs, 0.2em);
  box-sizing: border-box;
  font-size: 1.25em;
  margin: var(--_m, 0.1875em 0.1875em 0.1875em 0.25em);
  position: relative;
  width: 1em;
}
[type="checkbox"]::after {
  background: var(--_bga, transparent);
  content: "";
  inset: 0;
  position: absolute;
  mask: var(--_mask) no-repeat center / contain;
  -webkit-mask: var(--_mask) no-repeat center / contain;
}

